main/default/objects/RAID__c/RAID__c.object-meta.xml
<CustomObject>
    <label>RAID</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>RAID Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RAID</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>