main/default/objects/RAID__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>RAIDs1</relationshipName>
    <type>Lookup</type>
</CustomField>