main/default/objects/RAID__c/fields/Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalated To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>RAIDs2</relationshipName>
    <type>Lookup</type>
</CustomField>