main/default/objects/RAID__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Campaign__c</field>
            <operation>equals</operation>
            <valueField>Event__c.Campaign__c</valueField>
        </filterItems>
        <filterItems>
            <field>Event__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>RAID</relationshipLabel>
    <relationshipName>RAID</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>