main/default/objects/RAID__c/fields/Mitigation_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Mitigation_Strategy__c</fullName>
    <label>Mitigation Strategy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>