main/default/objects/RAID__c/fields/Potential_Impact__c.field-meta.xml
<CustomField>
    <fullName>Potential_Impact__c</fullName>
    <label>Potential Impact</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>