main/default/objects/RAID__c/fields/Raised_by__c.field-meta.xml
<CustomField>
    <fullName>Raised_by__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Raised by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RAID (Raised by)</relationshipLabel>
    <relationshipName>RAIDs3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>