main/default/objects/RAID__c/fields/Raised_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Raised_By_Email__c</fullName>
    <formula>Raised_by__r.Email</formula>
    <label>Raised By Email</label>
    <type>Text</type>
</CustomField>