main/default/objects/RAID__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>Addressed</fullName>
            </value>
            <value>
                <fullName>Decision Pending</fullName>
            </value>
            <value>
                <fullName>Decision Made</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>