main/default/objects/RAID__c/validationRules/Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Description__c)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>The description field is required.</errorMessage>
</ValidationRule>